syntax = "proto3";

package xatu.blockprint;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/blockprint";

import "google/protobuf/wrappers.proto";

message BlockClassification {
  google.protobuf.UInt64Value slot = 1;
  string best_guess_single = 2 [ json_name = "best_guess_single" ];
  string best_guess_multi = 3 [ json_name = "best_guess_multi" ];
  ClientProbability client_probability = 4 [ json_name = "client_probability" ];
  google.protobuf.UInt64Value proposer_index = 5 [ json_name = "proposer_index" ];
}

message ClientProbability {
  google.protobuf.FloatValue uncertain = 1;
  google.protobuf.FloatValue prysm = 2;
  google.protobuf.FloatValue teku = 3;
  google.protobuf.FloatValue nimbus = 4;
  google.protobuf.FloatValue lodestar = 5;
  google.protobuf.FloatValue grandine = 6;
  google.protobuf.FloatValue lighthouse = 7;
}